# persistent-bundles

./: README.md  justfile  pyproject.toml  pyrightconfig.json
src/persistent_bundles/: __init__.py  api.py  exceptions.py  types.py  utils.py
src/persistent_bundles/base_classes/: json_attribute_bundle.py
tests/: test_all.py  test_json_attribute_bundle.py
