[project]
name = "persistent-bundles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Valter Schütz", email = "valterschutz@proton.me" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-watch>=4.2.0",
]
