[project]
name = "persistent-bundles"
version = "0.2.0"
description = "Save and load versioned Python object bundles with metadata."
readme = "README.md"
license = "Unlicense"
authors = [
    { name = "Valter Schütz", email = "valterschutz@proton.me" }
]
requires-python = ">=3.13"
dependencies = []
keywords = ["bundles", "persistence", "serialization", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/valterschutz/persistent-bundles"
Issues = "https://github.com/valterschutz/persistent-bundles/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-watch>=4.2.0",
]
