[project]
name = "persistent-bundles"
version = "0.3.0"
description = "Save and load versioned Python object bundles with metadata."
readme = "README.md"
license = "Unlicense"
authors = [
    { name = "Valter Schütz", email = "valterschutz@proton.me" }
]
requires-python = ">=3.11"
dependencies = ["typing-extensions>=4.4.0"]
keywords = ["bundles", "persistence", "serialization", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/valterschutz/persistent-bundles"
Issues = "https://github.com/valterschutz/persistent-bundles/issues"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "pytest-watch>=4.2.0",
    "ruff>=0.15.22",
]
